# yellow_taxi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
tests/: test_database.py
yellow_taxi_data/: __init__.py  main.py  middleware.py
yellow_taxi_data/config/: exception_handlers.py  gunicorn_config.py  logging_info.py  settings.py
yellow_taxi_data/database/: postgres.py
yellow_taxi_data/database/sql/: get_daily_aggregate.sql  get_distance_by_percentile.sql  get_hourly_aggregate.sql
yellow_taxi_data/routers/: aggregate.py  health.py  percentile.py
